# iot_project

./: pyproject.toml  sss.ipynb
artifacts/: iot23_xgb_gpu.joblib
lamp/: ll.py  ooo.py  status.txt
src/: inference.py  model.py  read_dataset.py  train.py
src/api/: main.py  schemas.py  store.py
src/artifacts/: iot23_xgb_gpu.joblib
src/iot_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/web/static/: app.js  index.html  styles.css
