[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iot-project"
version = "0.1.0"
description = "IoT dataset and training utilities"
readme = "readme.md"
requires-python = ">=3.11"
dependencies = [
    # Табличные данные и форматы (CSV/Parquet и др.)
    "pandas>=2.2",
    "polars>=1.0",
    "numpy>=1.26",
    "pyarrow>=15.0",
    # Jupyter: ядро и интерфейс
    "ipykernel>=6.29",
    "jupyterlab>=4.0",
    "ipython>=8.18",
    "ipywidgets>=8.1",
    # Классика ML: случайный лес и бустинги
    "scikit-learn>=1.4",
    "scipy>=1.11",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "catboost>=1.2",
    # Логи / текстовые файлы датасетов (IoT23 — CSV, Zeek и т.п.)
    "tqdm>=4.66",
    "charset-normalizer>=3.3",
    # Разбор сетевых дампов (если работаете с pcap из IoT23)
    "dpkt>=1.9",
    # Визуализация и сводки
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.setuptools]
package-dir = { "" = "src" }
py-modules = ["read_dataset"]
